# ai-news-radar

./: .env.example  .gitignore  AI News Radar.cmd  CHANGELOG.md  README.md  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
config/: sources.json  watchlist.json
data/: market_regime.json  review_state.json
data/finra_short_volume/: CNMSshvol20260512.txt  CNMSshvol20260513.txt  CNMSshvol20260514.txt  CNMSshvol20260515.txt  CNMSshvol20260518.txt  CNMSshvol20260519.txt  CNMSshvol20260520.txt  CNMSshvol20260521.txt  CNMSshvol20260522.txt  CNMSshvol20260526.txt  CNMSshvol20260527.txt  CNMSshvol20260528.txt  CNMSshvol20260529.txt  CNMSshvol20260601.txt  CNMSshvol20260602.txt  CNMSshvol20260603.txt  CNMSshvol20260604.txt  CNMSshvol20260605.txt  CNMSshvol20260608.txt  CNMSshvol20260609.txt
docs/: options-flow-github-scan.md  product_brief.md  signal_model.md
src/: __init__.py
src/abnormal_news_radar/: __init__.py  analyst.py  cli.py  config.py  daily_report.py  diagnose.py  discovery.py  (+32 more)
tests/: test_analyst.py  test_config.py  test_daily_export.py  test_daily_report.py  test_diagnose.py  test_discovery.py  test_earnings_analysis.py  test_earnings_calendar.py  test_expectations.py  test_feeds.py  test_filing_teardown.py  test_financials.py  test_freshness.py  test_gamma.py  test_impact.py  test_institutional_flow.py  test_market.py  test_net.py  test_options_chain.py  test_options_flow.py  test_pdf_intel.py  test_performance.py  test_positioning.py  test_price_volume.py  test_quality.py  test_quick_model.py  test_readthrough.py  test_relative_strength.py  test_reverse_13f.py  test_scoring.py  test_serenity_alpha.py  test_short_interest.py  test_storage.py  test_technology_intel.py  test_ticker_resolver.py  test_timeliness.py  test_web.py
(+4 files in other folders)
