[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-news-radar"
version = "0.2.0"
description = "Local financial news radar for early hard-signal detection from free public sources."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AI News Radar contributors" }]
keywords = ["finance", "news", "signals", "equity-research", "rss"]

# Runtime stays dependency-light on purpose: the tool runs against free public
# sources and should remain a zero-config, double-click-to-run local terminal.
# `tzdata` is the one required runtime dependency because `zoneinfo` has no IANA
# time-zone database on Windows (and on minimal Linux containers), which the
# market-hours scan scheduler depends on.
dependencies = [
    "tzdata>=2024.1",
    # Full-text parsing of public PDFs (arXiv papers, IR/SEC PDFs). Pure-Python,
    # BSD-licensed, no native build step — keeps the install lightweight.
    "pypdf>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
ai-news-radar = "src.abnormal_news_radar.cli:main"
ai-news-radar-web = "src.abnormal_news_radar.web:main"

[project.urls]
Repository = "https://github.com/SeikiChan/ai-news-radar"

[tool.setuptools]
packages = ["src", "src.abnormal_news_radar"]
include-package-data = true

[tool.setuptools.package-data]
"src.abnormal_news_radar" = ["web_static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E501"]
